# char

./: .drone.yml  Cargo.toml  README.md  go.mod  go.sum  main.go
cmd/char/: do.go  limitedroot.go  ls.go  root.go
crates/char_cli/: Cargo.toml
crates/char_core/: Cargo.toml
crates/char_sdk/: Cargo.toml
crates/char_sdk/src/: lib.rs
crates/char_sdk/src/std/: mod.rs
crates/char_sdk/src/std/dagger/: mod.rs
crates/char_sdk/src/std/k8s/: mod.rs
crates/char_sdk_derive/: Cargo.toml
crates/char_sdk_derive/src/: lib.rs
examples/basic/: .gitignore  benchmark.sh  char.yml  test.sh  testdo.sh
examples/pipelines/: readme.md
examples/service/: char.toml
examples/service/char/src/: main.rs
examples/service/char_plan/: Cargo.toml
examples/service/char_plan/src/: main.rs
examples/service/plans/base/: char.toml
pkg/charcontext/: char_context.go  context_root.go
pkg/plugins/provider/: git.go
pkg/register/: plugin.go  plugin_api.go  plugin_builder.go  plugin_client.go  plugin_register.go  plugin_server.go
pkg/schema/: schema.go  schema_plugin.go  schema_plugin_test.go  schema_test.go
plugins/gocli/: main.go
plugins/rust/: main.go
src/: cli.rs  deps.rs  main.rs  models.rs  parser.rs
src/context/: mod.rs
src/resolvers/: install.rs  mod.rs
src/services/: downloader.rs
