[package]
name = "char"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
clap = { workspace = true }
tracing-subscriber = { workspace = true }

color-eyre = "*"

[workspace]
members = ["crates/char_core"]

[workspace.dependencies]
eyre = "0.6.8"
clap = "*"
tracing-subscriber = "*"
