[package]
name = "char_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eyre = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = "0.3.16"
clap = "4.1.6"
