[package]
name = "char_plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
char_sdk = { path = "../../../crates/char_sdk" }
char_sdk_derive = { path = "../../../crates/char_sdk_derive" }

eyre = { workspace = true }
tokio = { workspace = true }
